# Folio

./: .gitignore  CLAUDE.md  MONOREPO.md  README.md  benchmark.js  netlify.toml  package-lock.json  package.json  skills-lock.json  tsconfig.base.json
.claude/: launch.json
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.js
apps/web/netlify/: dev-server.js
apps/web/src/: App.tsx  index.css  types.ts  vite-env.d.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
netlify/: dev-server.js
netlify/functions/: chat.ts
src/: App.jsx  App.tsx  index.css
src/components/: AccentPicker.jsx  AccentPicker.tsx  AuthModal.jsx  CommandPalette.jsx  DailyHeader.jsx  EditorTopBar.jsx  LandingPage.jsx  LiveMarkdownEditor.jsx  LiveMarkdownEditor.test.js  LiveMarkdownEditor.test.jsx  LiveMarkdownEditor.tsx  MobileActionBar.jsx  MobileEditorToolbar.tsx  MoveToModal.tsx  NoteEditor.jsx  NoteEditor.tsx  SettingsMenu.tsx  Sidebar.jsx  Sidebar.tsx  TableBubbleMenu.jsx  TableBubbleMenu.tsx  TagInput.jsx
src/config/: accents.js  fonts.ts
src/contexts/: AuthContext.jsx
src/editor/core/: editorCommands.js  editorCommands.ts  extensions.js  extensions.ts
src/editor/extensions/: AiPromptBlock.tsx  TableView.jsx  (+3 more)
src/hooks/: useTreeManager.ts
src/lib/: notesDb.js
src/utils/: editorCommands.js  editorCommands.ts  exportNote.ts  markdownText.js  markdownText.test.js  noteMeta.js  tree.js  tree.test.js  tree.ts
(+74 files in other folders)
