[package]
name = "folio"
version = "0.1.0"
edition = "2021"
description = "Folio — a local-first note-taking app"

[lib]
name = "folio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
