[package]
name = "folio"
version = "0.1.0"
edition = "2021"
description = "Folio — a local-first note-taking app"

[lib]
name = "folio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
